[package]
name = "twinkly-mqtt"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "=0.11.0"
tokio = { version = "=1.35.1", features = [
	"rt",
	"rt-multi-thread",
	"net",
	"time",
	"macros",
	"sync",
	"signal",
] }
serde = { version = "=1.0.196", features = ["derive"] }
serde_json = { version = "=1.0.112", features = ["preserve_order"] }
rumqttc = "=0.23.0"
anyhow = "=1.0.79"
palette = { version = "=0.7.3", features = ["serializing"] }
log = "=0.4.20"
futures = "=0.3.30"
config = "=0.13.4"
byteorder = "=1.5.0"
reqwest = { version = "=0.11.23", default-features = false, features = [
	"json",
	"rustls-tls",
] }
base64 = "=0.21.7"
rand = "=0.8.5"
