[package]
name = "twinkly-mqtt"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "=0.11.6"
tokio = { version = "=1.43.0", features = [
	"rt",
	"rt-multi-thread",
	"net",
	"time",
	"macros",
	"sync",
	"signal",
] }
serde = { version = "=1.0.218", features = ["derive"] }
serde_json = { version = "=1.0.140", features = ["preserve_order"] }
rumqttc = "=0.24.0"
anyhow = "=1.0.97"
palette = { version = "=0.7.6", features = ["serializing"] }
log = "=0.4.26"
futures = "=0.3.31"
config = "=0.15.8"
byteorder = "=1.5.0"
reqwest = { version = "=0.12.12", default-features = false, features = [
	"json",
	"rustls-tls",
] }
base64 = "=0.22.1"
rand = "=0.8.5"
