[package]
name = "twinkly-mqtt"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "=0.11.11"
tokio = { version = "=1.53.1", features = [
	"rt",
	"rt-multi-thread",
	"net",
	"time",
	"macros",
	"sync",
	"signal",
] }
serde = { version = "=1.0.229", features = ["derive"] }
serde_json = { version = "=1.0.151", features = ["preserve_order"] }
rumqttc = "=0.25.1"
anyhow = "=1.0.104"
palette = { version = "=0.7.6", features = ["serializing"] }
log = "=0.4.33"
futures = "=0.3.33"
config = "=0.15.19"
byteorder = "=1.5.0"
reqwest = { version = "=0.12.28", default-features = false, features = [
	"json",
	"rustls-tls",
] }
base64 = "=0.23.0"
rand = "=0.8.5"
